# MiniJlrs

./: Cargo.toml  Manifest.toml  Project.toml  README.md  shell.nix
examples/: agent.jl  populate.jl  print.jl  runtime.jl
src/: MyModule.jl  lib.rs
