[package]
name = "minijlrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jlrs = { version = "0.22.1", features = ["jlrs-derive", "ccall"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
jlrs = { version = "0.22.1", features = ["jlrs-derive", "ccall", "local-rt"] }
